--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Brotli==1.0.9
 click==7.1.2
 dash==1.19.0
+dash-bootstrap-components==0.12.0
 dash-core-components==1.15.0
 dash-html-components==1.1.2
 dash-leaflet==0.1.13
